refactor(agentic-ai): introduce domain-oriented code flow for agent conversation (#7527)
* feat(agentic-ai): extract MessageWindowFilter static utility from MessageWindowRuntimeMemory

* feat(agentic-ai): add ConversationTurn, AgentConfiguration, AgentInvocationInput domain records

* feat(agentic-ai): add ConversationSnapshot, AgentInput sealed interface, ValidationResult

* feat(agentic-ai): add nullable agentInstanceKey to AgentContext

* feat(agentic-ai): add TurnReconstructor for turn reconstruction from message history

* revert(agentic-ai): remove agentInstanceKey from AgentContext — already present in AgentMetadata

* feat(agentic-ai): rewrite AgentConversation as immutable domain aggregate

# Conflicts:
#	connectors/agentic-ai/src/main/java/io/camunda/connector/agenticai/aiagent/model/AgentConversation.java

* feat(agentic-ai): add AgentInputComposer decision interface replacing AgentMessagesHandler

* feat(agentic-ai): update AiFrameworkAdapter to use ConversationSnapshot; drop agentContext from chat response

* feat(agentic-ai): update SystemPromptComposer and AgentResponseHandler to operate on AgentConversation

- SystemPromptContributor.contributeSystemPrompt → contribute(AgentConversation)
- SystemPromptComposer.composeSystemPrompt → compose(AgentConversation); reads config from conversation.configuration().systemPrompt()
- A2aSystemPromptContributor updated to use conversation.baseAgentContext().properties()
- AgentResponseHandler.createResponse simplified to single AgentConversation param
- AgentResponseHandlerImpl: injects GatewayToolHandlerRegistry, derives tool calls from conversation.lastTurn().assistantMessage() via registry, uses conversation.toAgentContext() for merged metrics
- AgenticAiConnectorsAutoConfiguration: passes registry to AgentResponseHandlerImpl
- AgentMessagesHandlerImpl.addSystemMessage: bridges old interface to new compose() call
- All tests updated to new signatures

* refactor(agentic-ai): replace BaseAgentRequestHandler loo